--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch Ejercicioenclase5",
+            "request": "launch",
+            "mainClass": "clase01.src.Ejercicioenclase5",
+            "projectName": "Proyectos_d4ded81c"
+        },
+        {
+            "type": "java",
             "name": "Launch EjercicioEnCasa4",
             "request": "launch",
             "mainClass": "clase01.src.EjercicioEnCasa4",
