--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "python.pythonPath": "C:\\Users\\ASUS\\AppData\\Local\\Programs\\Python\\Python39\\python.exe",
     "java.project.sourcePaths": [
+        "Ciclo2/Cursojava",
         "Ciclo2/Clase1",
-        "Ciclo2/Cursojava"
+        "Ciclo2/Clase2/clase01/src"
     ]
 }
